--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ uit niets kan  jij bestaan</em><br>
       <li class="liheader"></button>        
     </ul>
     
-  <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
+  <ol>
+    <li><h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2></li>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
     <br>
@@ -223,6 +224,7 @@ Sommige groepen hebben een naam:<br>
     Een element kun je <strong><em>niet</em></strong> ontleden, omdat ze uit één atoomsoort bestaan.<br>
     Een verbinding kun je <strong><em>wel</em></strong> ontleden, omdat ze uit verschillende atoomsoorten bestaan.<br> 
   </p>
+</ol>
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
