--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ uit niets kan  jij bestaan</em><br>
     </ul>
     
   <ol>
-    <li><h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2></li>
+    <li id="nummering"><h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2></li>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
     <br>
