--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ uit niets kan  jij bestaan</em><br>
 
       <h2>Inhoud:</h2>
       <ul id="idheader">
-      <li class="liheader"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>
+      <li class="liheader"><a href="#h2_1">Stoffen, stofeigenschappen en dichtheid</a></li>       
       <li class="liheader"><a href="#h2_2">Atomen en moleculen</a></li>
       <li class="liheader"><a href="#h2_3">Het periodiek systeem</a></li>
       <li class="liheader"><a href="#h2_4">Formules die je moet kennen</a></li>
@@ -61,8 +61,7 @@ uit niets kan  jij bestaan</em><br>
       <li class="liheader"></button>        
     </ul>
     
-  <ol>
-    <li id="nummering"><h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2></li>
+    <h2 id="h2_1" class="h2">1. Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
     <br>
@@ -224,7 +223,7 @@ Sommige groepen hebben een naam:<br>
     Een element kun je <strong><em>niet</em></strong> ontleden, omdat ze uit één atoomsoort bestaan.<br>
     Een verbinding kun je <strong><em>wel</em></strong> ontleden, omdat ze uit verschillende atoomsoorten bestaan.<br> 
   </p>
-</ol>
+
   <div id="bronnen">
   <h2 id="h2bronnen">Bronnen:</h2>
   <ol>
