--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@ uit niets kan  jij bestaan</em><br>
 
       <h2>Inhoud:</h2>
       <ul id="idheader">
-      <li class="liheader"><a href="#h2_1">1. Stoffen, stofeigenschappen en dichtheid</a></li>       
-      <li class="liheader"><a href="#h2_2">Atomen en moleculen</a></li>
-      <li class="liheader"><a href="#h2_3">Het periodiek systeem</a></li>
-      <li class="liheader"><a href="#h2_4">Formules die je moet kennen</a></li>
-      <li class="liheader"><a href="#h2_5">Elementen, verbindingen en ontleden</a></li>      
+      <li class="liheader"><a href="#h2_1">1. Stoffen, stofeigenschappen en dichtheid</a></li><br>       
+      <li class="liheader"><a href="#h2_2">2. Atomen en moleculen</a></li>
+      <li class="liheader"><a href="#h2_3">3. Het periodiek systeem</a></li>
+      <li class="liheader"><a href="#h2_4">4. Formules die je moet kennen</a></li>
+      <li class="liheader"><a href="#h2_5">5. Elementen, verbindingen en ontleden</a></li>      
       <li class="liheader"></button>
       <li class="liheader"></button>        
     </ul>
