--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ uit niets kan  jij bestaan</em><br>
       <li class="liheader"></button>        
     </ul>
     
-    <h2 id="h2_1" class="h2">1. Stoffen, stofeigenschappen en dichtheid</h2>
+    <h2 id="h2_1" class="h2">Stoffen, stofeigenschappen en dichtheid</h2>
   <p>Alles om ons heen in het gehele heelal, bestaat uit stoffen en dat zijn er miljoenen, miljoenen en miljoenen<br>
     (bv. hout, plastic, ijzer, grond, lucht, dieren, planten, mensen, bacteriën, water, olie etc.).<br>
     <br>
